--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'BX'
 - !lcsh 'Waldenses'
 - !lcsh 'Huguenots'
+- GITenberg
 title: The Huguenots in France
 url: http://www.gutenberg.org/ebooks/26524
